# finance-matching-engine

./: CMakeLists.txt  README.md
InputData/: instrument_input.csv
MatchingEngine/: .gitignore
MatchingEngine/include/: CreateInstrumentWidget.h  Instrument.hpp  InstrumentManager.hpp  MainWindow.h  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  Trading.hpp  Utils.hpp
MatchingEngine/src/: CreateInstrumentWidget.cpp  Instrument.cpp  InstrumentManager.cpp  Main.cpp  MainWindow.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  Utils.cpp
